--- a/src/index.css
+++ b/src/index.css
@@ -52,3 +52,7 @@
     max-width: 400px;
     font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
     }
+
+#right-side-bar {
+    display: none;
+}
