--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,38 @@
-.Map{
+*{
+    font-family: 'Montserrat', sans-serif ;
+}
+
+/* Navbar */
+
+.navbar{
+    background: white !important;
+}
+
+.nav-item .active{
+    background: #00D0FE !important;
+    color: white !important;
+
+}
+
+.nav-link{
+    color: #5827B8 !important;
+}
+
+/* Map Style */
+
+.Map {
     position: relative;
-    width: 900px;
     height: 700px;
 }
 
-#map{
+#map {
     width: 100%;
     height: 700px;
     position: absolute;
 }
+
+
+/* Map Navigation Button Style */
 
 #menu {
     background: #fff;
@@ -19,9 +43,9 @@
     border-radius: 3px;
     width: 25px;
     font-family: 'Open Sans', sans-serif;
-    }
-     
-    #menu button {
+}
+
+#menu button {
     background: white;
     font-size: 13px;
     color: #7C39BF;
@@ -32,27 +56,36 @@
     text-decoration: none;
     border: none;
     text-align: center;
-    }
-     
-    #menu button:hover {
-    background-color: rgb(225,225,225);
+}
+
+#menu button:hover {
+    background-color: rgb(225, 225, 225);
     color: #404040;
-    }
-     
-    #menu button.active {
+}
+
+#menu button.active {
     background-color: #9756D8;
     color: #ffffff;
-    }
-     
-    #menu button.active:hover {
-    background:#8668AA;
-    }
+}
 
-.mapboxgl-popup {
-    max-width: 400px;
-    font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
-    }
+#menu button.active:hover {
+    background: #8668AA;
+}
+
+
+/* Map Side-bar Style */
 
 #right-side-bar {
+    height: 700px;
     display: none;
+}
+
+#profile-pic {
+    height: 100px;
+    width: 100px;
+}
+
+#home {
+    background: url('./assets/Group.svg');
+    height: 100vh;
 }
