build static version (no dynamic data)

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,25 +1,76 @@
 <% include ./partials/header.ejs %>
+<script src="/static/app.js"></script>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-2" id="navigation-box">
+            <div class="row justify-content-center">
+                <div class="col-sm-9 my-2">
+                    <img src="/static/logo-dark-mode.svg" alt="cuHacking-logo" class="figure-img img-fluid my-2" />
+                </div>
+            </div>
+            <ul class="nav flex-column" id="navigation-links">
 
-<div class="row">
-    <div class="col-sm-2">
-        <ul class="nav flex-column">
-            <li class="nav-item">
-                <a class="nav-link active" href="#">Active</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
-            </li>
-        </ul>
-    </div>
-    <div class="col-sm-10">
-<h1>Updates</h1>
+                <li class="nav-item">
+                    <a class="nav-link active m-0 p-0" href="/updates">
+                        <div class="row">
+                            <div class="col-1 p-0" id="navigation-link-left-box"></div>
+                            <div class="col-11">
+                                <p class="mx-2 my-1">Updates</p>
+                            </div>
+                        </div>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link m-0 p-0" href="/schedule">
+                        <div class="row">
+                                <div class="col-1 p-0"></div>
+                                <div class="col-11">
+                                    <p class="mx-2 my-1">Schedule</p>
+                                </div>
+                            </div>
+                    </a>
+                </li>
 
+            </ul>
+        </div>
+        <div class="col-sm-9">
+            <div class="container m-4 px-3">
+                <h1 class="display-4 py-3" id="heading-font">Updates</h1>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="card my-3" id="updates-cards">
+                            <div class="card-body">
+                                <h4 class="heading-card" id="heading-font">Lunck is served! (Blue)</h4>
+                                <div id="updates-cards-time"><small>2 minutes ago</small></div>
+                                <div class="my-2">If you're a blue, it's your turn for lunch.</div>
+
+                                <div><small><i class="fas fa-map-marker-alt"></i> Atrium</small></div>
+                            </div>
+                        </div>
+                        <div class="card my-3" id="updates-cards">
+                            <div class="card-body">
+                                <h4 class="heading-card" id="heading-font">Fundamentals of web Design starts now!</h4>
+                                <div id="updates-cards-time"><small>42 minutes ago</small></div>
+                                <div class="my-2">Presented by Lighthouse Labs. Learn how to design and create a font
+                                    end application with Figma and React!</div>
+
+                                <div><small><i class="fas fa-map-marker-alt"></i> Atrium</small></div>
+                            </div>
+                        </div>
+                        <div class="card my-3" id="updates-cards">
+                            <div class="card-body">
+                                <h4 class="heading-card" id="heading-font">Welcome to cuHacking</h4>
+                                <div id="updates-cards-time"><small>1 hour ago</small></div>
+                                <div class="my-2">Be sure to head to the registration booth to get your swag!</div>
+
+                                <div><small><i class="fas fa-map-marker-alt"></i> Atrium</small></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </div>
 </div>
 
