--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,7 @@
 
-body {
+html, body {
     font-family: 'Montserrat', sans-serif !important;
+    height: 100%;
 }
 
 #heading-font {
@@ -16,7 +17,7 @@ body {
 #navigation-box {
     background-color: #280749;
     padding:0;
-    height: 100vh;
+    height: 100%;
     box-shadow: 4px 0px 10px rgba(0, 0, 0, 0.25);
 }
 
