--- a/public/style.css
+++ b/public/style.css
@@ -15,10 +15,12 @@ html, body {
 
 
 #navigation-box {
+    position: fixed;
     background-color: #280749;
     padding:0;
-    height: 100%;
+    height: 100vh;
     box-shadow: 4px 0px 10px rgba(0, 0, 0, 0.25);
+    z-index: 1999;
 }
 
 #navigation-links .nav-item .nav-link{
