--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,6 @@
 <% include ./partials/header.ejs %>
+
+
 <script src="/static/app.js"></script>
 <div class="container-fluid">
     <div class="row">
@@ -40,12 +42,13 @@
             <div class="container m-4 px-3">
                 <h1 class="display-4 py-3" id="heading-font">Updates</h1>
                 <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-sm-8">
 
 
                         <%
                         var arr = updates.reverse();
                         arr.forEach(update =>{
+                            
 
                         
                             %>
@@ -56,8 +59,8 @@
                                     <small><%=update.deliveryTime%></small></div>
                                 <div class="my-2"><%=update.description%></div>
 
-                                <div><small><i class="fas fa-map-marker-alt"></i>
-                                        <%=update.locationId%></small></div>
+                                <!-- <div><small><i class="fas fa-map-marker-alt"></i>
+                                        <%=update.locationId%></small></div> -->
                             </div>
                         </div>
 
