--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -11,7 +11,7 @@
                 <div class="row">
                     <div class="col-1 p-0 d-none d-md-block" id="active-box-updates"></div>
                     <div class="col-11">
-                        <p class="mx-2 my-1"><i class="fas fa-bullhorn mr-2"></i> Updates</p>
+                        <p class="mx-2 my-1"><i class="fas fa-bullhorn mr-md-2"></i> Updates</p>
                     </div>
                 </div>
             </a>
@@ -22,7 +22,18 @@
                 <div class="row">
                     <div class="col-1 p-0 d-none d-md-block" id="active-box-schedule"></div>
                     <div class="col-11">
-                        <p class="mx-2 my-1"><i class="far fa-calendar mr-2"></i>Schedule</p>
+                        <p class="mx-2 my-1"><i class="far fa-calendar mr-md-2"></i>Schedule</p>
+                    </div>
+                </div>
+            </a>
+        </li>
+
+        <li class="nav-item">
+            <a class="nav-link m-0 p-0" id="map-link" href="/map">
+                <div class="row">
+                    <div class="col-1 p-0 d-none d-md-block" id="active-box-map"></div>
+                    <div class="col-11">
+                        <p class="mx-2 my-1"><i class="far fa-map mr-md-2"></i> Map</p>
                     </div>
                 </div>
             </a>
@@ -33,7 +44,7 @@
                 <div class="row">
                     <div class="col-1 p-0 d-none d-md-block" id="active-box-info"></div>
                     <div class="col-11">
-                        <p class="mx-2 my-1"><i class="fas fa-info-circle mr-2"></i> Info</p>
+                        <p class="mx-2 my-1"><i class="fas fa-info-circle mr-md-2"></i> Info</p>
                     </div>
                 </div>
             </a>
