--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -15,6 +15,66 @@
                 <p class="updates-cards-time">Saturday, December 7</p>
                 <div class="row">
                     <div class="col-md-8">
+
+                        <div class="row">
+                            <h4 class="col-3 my-3 text-right">
+                                08:00 AM
+                            </h4>
+                            <div class="col-9">
+                                <div class="card my-3 updates-cards">
+                                    <div class="card-body">
+                                        <h4 class="heading-card heading-font">Kotlin Workshop</h4>
+                                        <a data-toggle="modal" href="#exampleModalCenter">See more info</a>
+                                        
+                                        <!-- Modal -->
+                                        <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+                                            aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                                            <div class="modal-dialog modal-dialog-centered" role="document">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <img src="/static/svg/Group.svg" height="40px" width="100px" alt="" srcset="">
+                                                        <button type="button" class="close" data-dismiss="modal"
+                                                            aria-label="Close">
+                                                            <span aria-hidden="true">&times;</span>
+                                                        </button>
+                                                    </div>
+                                                    <div class="modal-body">
+                                                        <h5 class="modal-title" id="exampleModalLongTitle">Kotlin Workshop
+                                                        </h5>
+                                                        Time:  08:00 AM - 08:30 AM<br>
+                                                        Description: Learn a very nice language Kotlin in this workshop intended
+                                                        for begineers and intermediate skill level.<br>
+                                                        Location: <i class="fas fa-map-marker-alt"></i>
+                                                        RB 2308
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-secondary"
+                                                            data-dismiss="modal">Close</button>
+                                                        <button type="button" class="btn btn-primary">Add to Favourites</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                       
+                                        <div class="updates-cards-time">
+                                            <small>
+                                                08:00 AM - 08:30 AM
+                                            </small>
+                                        </div>
+                                        <div class="my-2">Learn a very nice language Kotlin in this workshop intended
+                                            for begineers and intermediate skill level.</div>
+                                        <div>
+                                            <small>
+                                                <i class="fas fa-map-marker-alt"></i>
+                                                RB 2308
+                                            </small>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
                         <% schedule.forEach(schedule=>{ %>
                         <div class="row">
                             <h4 class="col-3 my-3 text-right">
