--- a/public/style.css
+++ b/public/style.css
@@ -46,10 +46,10 @@ html, body {
     }
     #navigation-box div div {
         text-align: center;
-        font-size: 20px;
+        font-size: 15px;
     }
     #main-content {
-        margin-top: -30px;
+        margin-top: -44px;
     }
 }
 
@@ -65,4 +65,71 @@ html, body {
         box-shadow: 4px 0px 10px rgba(0, 0, 0, 0.25);
         z-index: 1999;
     }
+}
+
+/* Map Style */
+
+.Map {
+    position: relative;
+    height: 600px;
+}
+
+#map {
+    width: 100%;
+    height: 600px;
+    position: absolute;
+}
+
+
+/* Map Navigation Button Style */
+
+#menu {
+    background: #fff;
+    position: absolute;
+    z-index: 1;
+    top: 20px;
+    right: 40px;
+    border-radius: 3px;
+    width: 25px;
+    font-family: 'Open Sans', sans-serif;
+}
+
+#menu button {
+    background: white;
+    font-size: 13px;
+    color: #7C39BF;
+    display: block;
+    margin: 0;
+    padding: 0;
+    padding: 10px;
+    text-decoration: none;
+    border: none;
+    text-align: center;
+}
+
+#menu button:hover {
+    background-color: rgb(225, 225, 225);
+    color: #404040;
+}
+
+#menu button.active {
+    background-color: #9756D8;
+    color: #ffffff;
+}
+
+#menu button.active:hover {
+    background: #8668AA;
+}
+
+
+/* Map Side-bar Style */
+
+#right-side-bar {
+    height: 500px;
+    display: none;
+    background-color: rgba(151, 86, 216, 0.25) !important;
+}
+
+#close {
+    background-color: #9756D8 !important;
 }
