--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,12 @@
+* {
+    --textColour: #000000;
+    --secondTextColour: #FFFFFF;
+    --lightPrimaryColour: #9756D8;
+    --primaryColour: #5827B8;
+    --darkPrimaryColour: #280749;
+    --secondaryColour: #00D0FE;
+}
+
 html, body {
     font-family: 'Montserrat', sans-serif !important;
     height: 100%;
@@ -80,7 +89,6 @@ html, body {
     position: absolute;
 }
 
-
 /* Map Navigation Button Style */
 
 #menu {
@@ -121,7 +129,6 @@ html, body {
     background: #8668AA;
 }
 
-
 /* Map Side-bar Style */
 
 #right-side-bar {
@@ -132,4 +139,109 @@ html, body {
 
 #close {
     background-color: #9756D8 !important;
+}
+
+.countdown {
+    font-size: 48px;
+    margin: 0;
+    max-width: 9999px;
+}
+
+.middle {
+    font-size: 25px;
+    background-color: var(--darkPrimaryColour);
+}
+
+.middle-div span {
+    color: var(--secondaryColour);
+}
+
+.middle-div .white {
+    color: var(--secondTextColour);
+}
+
+.bottom {
+    margin-top: 15px;
+}
+
+.app-promo-box {
+    height: 60%;
+    border: 2px solid #00D0FE;
+    margin-bottom: 45px;
+}
+
+.app-promo-box img {
+    height: 50px;
+    margin: 0 5px;
+}
+
+.app-promo-box .container {
+    height: 100%;
+}
+
+@media screen and (min-width: 768px) and (min-height: 570px) {
+    .top {
+        padding-top: 10vh;
+        height: 26vh;
+    }
+    .middle {
+        font-size: 40px;
+        height: 18vh;
+    }
+    .bottom {
+        margin-top: 0;
+        height: 56vh;
+    }
+    .bottom-1 {
+        margin-top: 20px;
+        height: 50%;
+    }
+    .bottom-2 {
+        height: 50%;
+    }
+    .app-promo-box img {
+        height: 75px;
+        margin: 0 5px;
+    }
+}
+
+@media screen and (min-width: 532px) and (max-width: 768px) and (min-height: 570px) {
+    .top {
+        height: 15vh;
+    }
+    .middle {
+        font-size: 40px;
+        height: 40vh;
+    }
+    .bottom {
+        margin-top: 30px;
+    }
+    .bottom-1 {
+        margin-top: 20px;
+        height: 50%;
+    }
+    .bottom-2 {
+        height: 50%;
+    }
+    .app-promo-box img {
+        height: 75px;
+        margin: 0 5px;
+    }
+}
+
+@media screen and (max-width: 532px) {
+    .top {
+        height: 15vh;
+    }
+    .middle {
+        font-size: 30px;
+        height: 30vh;
+    }
+    .bottom {
+        margin-top: 30px;
+    }
+    .app-promo-box img {
+        height: 50px;
+        margin: 0 5px;
+    }
 }
