add profile + set app to use new endpoint models

--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -16,7 +16,7 @@
                 <div class="row">
                     <div class="col-md-8">
 
-                        <div class="row">
+                        <!-- <div class="row">
                             <h4 class="col-3 my-3 text-right">
                                 08:00 AM
                             </h4>
@@ -26,7 +26,6 @@
                                         <h4 class="heading-card heading-font">Kotlin Workshop</h4>
                                         <a data-toggle="modal" href="#exampleModalCenter">See more info</a>
                                         
-                                        <!-- Modal -->
                                         <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
                                             aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
                                             <div class="modal-dialog modal-dialog-centered" role="document">
@@ -72,7 +71,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
 
 
                         <% schedule.forEach(schedule=>{ %>
@@ -93,7 +92,7 @@
                                         <div>
                                             <small>
                                                 <i class="fas fa-map-marker-alt"></i>
-                                                <%= schedule.locationName %>
+                                                <%= schedule.location %>
                                             </small>
                                         </div>
                                     </div>
