--- a/views/updates.ejs
+++ b/views/updates.ejs
@@ -20,7 +20,7 @@
                         arr.forEach(update =>{ %>
                         <div class="card my-3 updates-cards">
                             <div class="card-body">
-                                <h4 class="heading-card heading-font"><%= update.title %></h4>
+                                <h4 class="heading-card heading-font"><%= update.name %></h4>
                                 <div class="updates-cards-time">
                                     <small>
                                         <%= update.deliveryTime %>
