--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,7 @@
     --textColour: #000000;
     --secondTextColour: #FFFFFF;
     --lightPrimaryColour: #9756D8;
-    --primaryColour: #5827B8;
+    --primaryColour: #5827b8;
     --darkPrimaryColour: #280749;
     --secondaryColour: #00D0FE;
 }
@@ -53,9 +53,15 @@ html, body {
         box-shadow: 4px 0px 10px rgba(0, 0, 0, 0.25);
         z-index: 1999;
     }
+    #links34{
+        margin-left:0 !important;
+        margin-right: 0 !important;
+        padding-left: 0 !important;
+        padding-right: 0 !important; 
+    }
     #navigation-box div div {
         text-align: center;
-        font-size: 15px;
+        font-size: 16px;
     }
     #main-content {
         margin-top: -44px;
@@ -244,4 +250,30 @@ html, body {
         height: 50px;
         margin: 0 5px;
     }
+}
+
+#login-email, #login-password {
+    width: 80%;
+}
+
+.login-button {
+    border: none;
+    color: white;
+    padding: 5px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    background-color: var(--primaryColour);
+    width: 40%;
+}
+
+.forgot-link {
+    color: var(--primaryColour);
+}
+
+.logout-link {
+    color: var(--primaryColour);
+    font-weight: bold;
+    font-size: large;
 }
