--- a/views/info.ejs
+++ b/views/info.ejs
@@ -23,11 +23,11 @@
                                     <table>
                                         <tr>
                                             <td style="width: 15rem;">Network SSID:</td>
-                                            <td>cuHacking 2020</td>
+                                            <td><%=info.wifi.network%></td>
                                         </tr>
                                         <tr>
                                             <td>Password: </td>
-                                            <td>richcraft</td>
+                                            <td><%=info.wifi.password%></td>
                                         </tr>
                                     </table>
                                 </div>
@@ -45,7 +45,7 @@
                                         </tr>
                                         <tr>
                                             <td>Carleton University Police: </td>
-                                            <td>613-520-4444</td>
+                                            <td><%=info.emergency%></td>
                                         </tr>
                                         <tr>
                                             <td>cuHacking: </td>
@@ -55,6 +55,34 @@
                                 </div>
                             </div>
                         </div>
+
+                        <div class="card mb-3">
+                            <div class="card-body">
+                                <h4 class="heading-card heading-font mb-3"> Help</h4>
+                                <div class="card-text">
+                                    <%=info.help%>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card mb-3">
+                            <div class="card-body">
+                                <h4 class="heading-card heading-font mb-3"> Social</h4>
+                                <div class="card-text">
+                                    <a href="http://facebook.com/cuhacking" target="_blank"> <i
+                                            class="fab fa-facebook-square"></i>
+                                    </a>&nbsp;&nbsp;
+                                    <a href="http://instagram.com/cuHacking" target="_blank"> <i
+                                            class="fab fa-instagram"></i>
+                                    </a>&nbsp;&nbsp;
+                                    <a href="http://twittter.com/cuHacking" target="_blank"> <i
+                                            class="fab fa-twitter-square"></i>
+                                    </a>&nbsp;&nbsp;
+                                </div>
+                            </div>
+                        </div>
+
+
                     </div>
                 </div>
             </div>
